Merge branch 'idempiere:master' into ng-IDEMPIERE-6793-accounting-split (#3193)
* IDEMPIERE-6647 Improve test coverage of org.adempiere.base (#3186)

* IDEMPIERE-6647 Improve test coverage of org.adempiere.base

- Fix PO PostCreate, PostUpdate and PostDelete event not always fire
after successful commit
- Add sleep to wait for the async running of PostCreate, PostUpdate and
PostDelete event
- Handle USE_EMAIL_FOR_LOGIN: MUser.get(Email) or MUser.get(Name)

* IDEMPIERE-6647 Improve test coverage of org.adempiere.base

- replace hardcoded sleep with poll-with-timeout

* IDEMPIERE-6820 Add multi tenant support to SSO (DAD-209) (#3177)

* IDEMPIERE-6820 Add multi tenant support to SSO (DAD-209)

- Sync admin.zul with index.zul
- Added MClient cache by login prefix
- Make usage of sso provider uuid cookie more constraint
- Should Always show login page for admin login
- Validate sso provider uuid cookie
- Always set ISSOPrincipalService.SSO_SELECTED_PROVIDER session
attribute
- Validate sso povider uuid params against tenant login prefix

* IDEMPIERE-6820 Add multi tenant support to SSO (DAD-209)

- Fix change role not working with sso=y and showloginpage=n
- Fix tenant parameter lost after logout

* IDEMPIERE-6820 Add multi tenant support to SSO (DAD-209)

- refine handling of tenant query parameter
- make "tenant" string a static constant

* IDEMPIERE-6820 Add multi tenant support to SSO (DAD-209)

- catch potential uuid conversion error.

* IDEMPIERE-6820 Add multi tenant support to SSO (DAD-209)

- Fix validation of config for login tenant prefix

* IDEMPIERE-6828 Matched PO Status "Deferred" not being posted upon MR match (#3151)

* IDEMPIERE-6828 Matched PO Status "Deferred" not being posted upon MR match

* IDEMPIERE-6820 Add multi tenant support to SSO (DAD-209) (#3190)

* IDEMPIERE-6820 Add multi tenant support to SSO (DAD-209)

- Fix SSO_SHOW_LOGINPAGE=Y not working correctly

* IDEMPIERE-6820 Add multi tenant support to SSO (DAD-209)

- address coderabbitai re