@@ -25,6 +25,7 @@ package org.adempiere.webui.panel;
 
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
@@ -48,6 +49,7 @@ import org.adempiere.webui.component.Window;
 import org.adempiere.webui.event.TokenEvent;
 import org.adempiere.webui.exception.ApplicationException;
 import org.adempiere.webui.session.SessionManager;
+import org.adempiere.webui.sso.filter.SSOWebUIFilter;
 import org.adempiere.webui.theme.ITheme;
 import org.adempiere.webui.theme.ThemeManager;
 import org.adempiere.webui.util.BrowserToken;
@@ -404,12 +406,17 @@ public class LoginPanel extends Window implements EventListener<Event>
 		{
 			// if has tenant login prefix, get SSO principal config by tenant login prefix
 			// else get system level SSO principal config
-			Session currSess = Executions.getCurrent().getDesktop().getSession();        
-        	String tenant = (String) currSess.getAttribute("tenant");
+			Session currSess = Executions.getCurrent().getDesktop().getSession();
+			// always show login page for admin login (admin.zul)
+			var adminLogin = currSess.getAttribute(ISSOPrincipalService.SSO_ADMIN_LOGIN);
+			if (adminLogin != null && adminLogin instanceof Boolean && (Boolean) adminLogin)
+				isShowLoginPage = true;
+        	String tenant = (String) currSess.getAttribute(SSOWebUIFilter.TENANT_PREFIX_PARAMETER);
 			List<MSSOPrincipalConfig> configs = new ArrayList<>();
 			if (!Util.isEmpty(tenant, true))
 			{
-				var client = MClient.getByLoginPrefix(tenant.trim());
+				tenant = tenant.trim();
+				var client = MClient.getByLoginPrefix(tenant);
 				if (client != null)
 					configs = MSSOPrincipalConfig.getSSOPrincipalConfigByClient(client.getAD_Client_ID());
 			}
@@ -433,7 +440,7 @@ public class LoginPanel extends Window implements EventListener<Event>
 					tr.appendChild(td);
 					// Apply styles and add button
 					td.setStyle("display: flex; align-items: center;");
-					Button loginButton = createSSOLoginButton(config);
+					Button loginButton = createSSOLoginButton(config, tenant);
 					td.appendChild(loginButton);
 
 					td = new Td();
@@ -728,7 +735,7 @@ public class LoginPanel extends Window implements EventListener<Event>
         Session currSess = Executions.getCurrent().getDesktop().getSession();
         
 		// get tenant login prefix from session which is set by filter
-        String tenant = (String) currSess.getAttribute("tenant");
+        String tenant = (String) currSess.getAttribute(SSOWebUIFilter.TENANT_PREFIX_PARAMETER);
         KeyNamePair clientsKNPairs[] = login.getClients(userId, userPassword, ROLE_TYPES_WEBUI, null, tenant);
         
         if (clientsKNPairs == null || clientsKNPairs.length == 0)
@@ -899,9 +906,10 @@ public class LoginPanel extends Window implements EventListener<Event>
 	 *
 	 * @param  config the SSO principle configuration used to customize the button and generate the
 	 *                redirect URL
+	 * @param tenant  the tenant identifier used to retrieve tenant-specific SSO configurations, if applicable 
 	 * @return        a configured {@link Button} object for SSO login
 	 */
-	private Button createSSOLoginButton(MSSOPrincipalConfig config)
+	private Button createSSOLoginButton(MSSOPrincipalConfig config, String tenant)
 	{
 		String name = config.getName();
 		String shortName = (!Util.isEmpty(name) && name.length() > 25) ? name.substring(0, 22) + "..." : name;
@@ -923,9 +931,18 @@ public class LoginPanel extends Window implements EventListener<Event>
 					referrerUrl = null;
 			}
 
-			StringBuffer ssoURL = new StringBuffer("?").append(ISSOPrincipalService.SSO_SELECTED_PROVIDER).append("=").append(URLEncoder.encode(config.getSSO_PrincipalConfig_UU(), "UTF-8"));
+			
+			StringBuilder ssoURL = new StringBuilder("index.zul");
+			if (!Util.isEmpty(tenant, true))
+				ssoURL.append("?")
+					  .append(SSOWebUIFilter.TENANT_PREFIX_PARAMETER).append("=")
+					  .append(URLEncoder.encode(tenant, StandardCharsets.UTF_8));
+			
+			Executions.getCurrent().getSession().setAttribute(ISSOPrincipalService.SSO_SELECTED_PROVIDER, 
+					config.getSSO_PrincipalConfig_UU());
+			
 			if (referrerUrl != null)
-				ssoURL.append("&").append(ISSOPrincipalService.SSO_QUERY_STRING).append("=").append(URLEncoder.encode(referrerUrl, "UTF-8"));
+				Executions.getCurrent().getSession().setAttribute(ISSOPrincipalService.SSO_QUERY_STRING, referrerUrl);
 			Executions.sendRedirect(ssoURL.toString());
 		});
 
